--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,10 @@
         "/home/student/.config/Code/User/globalStorage/joedevivo.vscode-circuitpython/bundle/20210612/adafruit-circuitpython-bundle-py-20210612/lib"
     ],
     "circuitpython.board.version": "6.2.0",
-    "python.pythonPath": "/bin/python3"
+    "python.pythonPath": "/bin/python3",
+    "python.autoComplete.extraPaths": [
+        null,
+        "/home/student/.vscode/extensions/joedevivo.vscode-circuitpython-0.1.9/stubs",
+        "/home/student/.config/Code/User/globalStorage/joedevivo.vscode-circuitpython/bundle/20210619/adafruit-circuitpython-bundle-py-20210619/lib"
+    ]
 }
